samples/_failures_safe/1761082396_3420cb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_11c734d0.c: In function ‘main’:
./samples/SAFE/__tmp_11c734d0.c:133:5: error: expected identifier or ‘(’ at end of input
  133 |     int
      |     ^~~
./samples/SAFE/__tmp_11c734d0.c:133:5: error: expected declaration or statement at end of input
